Fixed the stock input box spacing

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ h3 {
 }
 
 .smaller-input {
-  width: 600px;
+  width: 50vw;
 }
 
 .btn-primary {
